src/view/tracer/snapshots/nifi_lens__view__tracer__render__tests__entry_empty.snap
---
source: src/view/tracer/render.rs
expression: snap(&state)
---
"┌ Tracer ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                      Paste a flowfile UUID to trace its lineage                                      │"
"│                                                                                                                      │"
"│                                                        UUID: _                                                       │"
"│                                                                                                                      │"
"│                                           Enter submit · Esc clear · ? help                                          │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
