src/view/tracer/snapshots/nifi_lens__view__tracer__render__tests__entry_invalid_uuid_banner.snap
---
source: src/view/tracer/render.rs
expression: snap(&state)
---
"┌ Tracer ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                      Paste a flowfile UUID to trace its lineage                                      │"
"│                                                                                                                      │"
"│                                                   UUID: not-a-uuid_                                                  │"
"│                                                                                                                      │"
"│                                               invalid UUID: not-a-uuid                                               │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
