src/view/tracer/snapshots/nifi_lens__view__tracer__render__tests__entry_with_input.snap
---
source: src/view/tracer/render.rs
expression: snap(&state)
---
"┌ Tracer ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                      Paste a flowfile UUID to trace its lineage                                      │"
"│                                                                                                                      │"
"│                                      UUID: 550e8400-e29b-41d4-a716-446655440000_                                     │"
"│                                                                                                                      │"
"│                                           Enter submit · Esc clear · ? help                                          │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
