src/view/tracer/snapshots/nifi_lens__view__tracer__render__tests__latest_events_loading.snap
---
source: src/view/tracer/render.rs
assertion_line: 1031
expression: snap(&state)
---
"┌ Tracer — Latest Events ──────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Component: abc-component-id-123                                                                                       │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                       loading…                                                       │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│Enter trace flowfile · Esc back · r refresh · c copy uuid · ? help                                                    │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
