src/view/tracer/snapshots/nifi_lens__view__tracer__render__tests__lineage_running_low_percent.snap
---
source: src/view/tracer/render.rs
expression: snap(&state)
---
"┌ Tracer — Running Lineage Query ──────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                            Running lineage query for 550e8400-e29b-41d4-a716-446655440000…                           │"
"│                                                                                                                      │"
"│                        ████████                         12%                                                          │"
"│                                                                                                                      │"
"│                                              elapsed <N>s   Esc to cancel                                              │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
