src/view/tracer/snapshots/nifi_lens__view__tracer__render__tests__lineage_view_collapsed_content.snap
---
source: src/view/tracer/render.rs
expression: snap(&state)
---
"┏ Lineage ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃  Apr 12 10:30:45.123  RECEIVE              LogAttribute                                                              ┃"
"┃> Apr 12 10:30:45.123  CONTENT_MODIFIED     LogAttribute                                                              ┃"
"┃  Apr 12 10:30:45.123  SEND                 LogAttribute         ← fail                                               ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
"┌ Detail ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Event #2 — LogAttribute  (CONTENT_MODIFIED · )                                                                        │"
"│Attributes | Input | Output                                                                                           │"
"│Attributes  [ ► All | Changed ] (1 changed)  +added · -deleted · ~unchanged                                           │"
"│  key                    │ previous                     │ current                                                     │"
"│~ filename               │ old_file.csv                 │ new_file.csv                                                │"
"│  mime.type              │ text/plain                   │ text/plain                                                  │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
