src/view/tracer/snapshots/nifi_lens__view__tracer__render__tests__lineage_view_diff_mode_changed.snap
---
source: src/view/tracer/render.rs
expression: snap(&state)
---
"┌ Lineage ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│  Apr 12 10:30:45.123  RECEIVE           LogAttribute            pg-root-aaaa-bbbb                                    │"
"│> Apr 12 10:30:45.123  CONTENT_MODIFIED  LogAttribute            pg-root-aaaa-bbbb                                    │"
"│  Apr 12 10:30:45.123  SEND              LogAttribute            pg-root-aaaa-bbbb           ← fail                   │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Detail ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Event #2 — LogAttribute  (CONTENT_MODIFIED · )                                                                        │"
"│Attributes  [ All | ► Changed ] (1 changed)                                                                           │"
"│  key                     previous                      current                                                       │"
"│· filename                old_file.csv                  new_file.csv                                                  │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│Content  [ i input · o output · s save ]                                                                              │"
"│(collapsed — press i or o to load)                                                                                    │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
