src/view/tracer/snapshots/nifi_lens__view__tracer__render__tests__lineage_view_expanded_text_content.snap
---
source: src/view/tracer/render.rs
expression: snap(&state)
---
"┌ Tracer — Lineage ────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│  10:30:45.123         RECEIVE           LogAttribute            pg-root-aaaa-bbbb                                    │"
"│> 10:30:45.123         CONTENT_MODIFIED  LogAttribute            pg-root-aaaa-bbbb                                    │"
"│  10:30:45.123         SEND              LogAttribute            pg-root-aaaa-bbbb           ← fail                   │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│"
"│Event #2 — LogAttribute  (CONTENT_MODIFIED · )                                                                        │"
"│Attributes  [ ► All | Changed ] (1 changed)                                                                           │"
"│  key                     previous                      current                                                       │"
"│· filename                old_file.csv                  new_file.csv                                                  │"
"│  mime.type               text/plain                    text/plain                                                    │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│Content (output)  36 bytes                                                                                            │"
"│{                                                                                                                     │"
"│… (3 more lines)                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
