src/view/tracer/snapshots/nifi_lens__view__tracer__render__tests__lineage_view_loading_detail.snap
---
source: src/view/tracer/render.rs
assertion_line: 1131
expression: snap(&state)
---
"┏ Lineage ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃  Apr 12 10:30:45.123  RECEIVE              LogAttribute                                                              ┃"
"┃> Apr 12 10:30:45.123  CONTENT_MODIFIED     LogAttribute                                                              ┃"
"┃  Apr 12 10:30:45.123  SEND                 LogAttribute         ← fail                                               ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┃                                                                                                                      ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
"┌ Detail ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                       loading…                                                       │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
