src/view/tracer/snapshots/nifi_lens__view__tracer__render__tests__lineage_view_tabular_avro_inline_preview.snap
---
source: src/view/tracer/render.rs
expression: snap(&state)
---
"┌ Lineage ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│  Apr 12 10:30:45.123  RECEIVE              LogAttribute                                                              │"
"│> Apr 12 10:30:45.123  CONTENT_MODIFIED     LogAttribute                                                              │"
"│  Apr 12 10:30:45.123  SEND                 LogAttribute         ← fail                                               │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Detail ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Event #2 — LogAttribute  (CONTENT_MODIFIED · )                                                                        │"
"│Attributes | Input | Output                                                                                           │"
"│┏ Content · output · 38 B ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 1/5 ┓│"
"│┃id : long                                                                                                           ┃│"
"│┃name : string                                                                                                       ┃│"
"│┃-- schema --                                                                                                        ┃│"
"│┃{"id":0,"name":"a"}                                                                                                 ┃│"
"│┃{"id":1,"name":"b"}                                                                                                 ┃│"
"│┃                                                                                                                    ┃│"
"│┃                                                                                                                    ┃│"
"│┃                                                                                                                    ┃│"
"│┃                                                                                                                    ┃│"
"│┃                                                                                                                    ┃│"
"│┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛│"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
